src/test/deca/syntax/parser/invalid/decl_var_wrong_equal_symbole_gt.deca
// Test de parser, un symbole spécial remplace le symbole
// égal, ici le symbole supérieur strict >

{
    int x > 5;
}